Going back to the Net Core solution for web socket
Inspiered by a project from Jon McGuire, this seems to do every thing I want.
I'm still not sure of 100% of the code and I will need some work to gork it.

--- a/WistGame/WebWist/Ressources/GameIndex.html
+++ b/WistGame/WebWist/Ressources/GameIndex.html
@@ -31,7 +31,7 @@
         // wsUri = "ws://echo.websocket.org/",
         websocket = null,
         isConnected = false;
-    var gameWebSocketUrl = document.URL.replace("https://", "ws://") + "Game";
+    var gameWebSocketUrl = document.URL.replace("http://", "ws://");
 
     writeToScreen("WS URI " + gameWebSocketUrl);
 
