Added script insertion into the index page.

--- a/WistGame/WebWist/Resources/GameIndex.html
+++ b/WistGame/WebWist/Resources/GameIndex.html
@@ -25,6 +25,9 @@
 <button>Connect</button>
 <div id=output></div>
 <script>
+$INSERT_SERIALIZATION
+</script>
+<script>
     var button = document.querySelector("button"),
         output = document.querySelector("#output"),
         textarea = document.querySelector("textarea"),
