--- a/WistGame/WebWist/Resources/GameIndex.html
+++ b/WistGame/WebWist/Resources/GameIndex.html
@@ -92,15 +92,7 @@
 
     var playArea = document.querySelector("#playArea");
 
-    var playerHand = {};
-    var bettingArea = {}
-    bettingArea.RootNode = document.createElement("table");
-    bettingArea.BettingNode = document.createElement("tr");
-    bettingArea.RootNode.appendChild(bettingArea.BettingNode);
-
-    var playerLabelNode = document.createElement("p");
-    var playerLabelText = document.createTextNode("Player ?");
-    playerLabelNode.appendChild(playerLabelText);
+    var playerObject = {};
 
     var otherPlayersParent = document.createElement("table");
     var otherPlayers = [];
@@ -299,20 +291,37 @@
             buildOtherPlayersNode();
             playArea.appendChild(otherPlayersParent);
 
-            playArea.appendChild(playerLabelNode);
-            buildPlayerHand();
-            playArea.appendChild(playerHand.RootNode);
-
+            buildPlayer();
+            playArea.appendChild(playerObject.RootNode);
 
             if (gameState.GameStateID == "Betting") {
-                buildPlayerBetting();
-                playArea.appendChild(bettingArea.RootNode);
+                playArea.appendChild(playerObject.PlayerBets.RootNode);
             }
         }
     }
 
-    function buildPlayerHand() {
+    function buildPlayer() {
+        playerObject.RootNode = createElementWithClass("table", "player");
+        playerObject.PlayerLabel = document.createTextNode("Player " + localPlayerIndex);
+        var paragraph = document.createElement("p");
+        paragraph.appendChild(playerObject.PlayerLabel);
+        playerObject.RootNode.appendChild(paragraph);
 
+        playerObject.Hand = buildPlayerHand();
+        playerObject.RootNode.appendChild(playerObject.Hand.RootNode);
+
+        playerObject.BetLabel = document.createTextNode("Betting " + gameState.Bet);
+        if (gameState.Bet >= 0) {
+            playerObject.RootNode.appendChild(playerObject.BetLabel);
+        } 
+
+        playerObject.PlayerBets = buildPlayerBetting();
+
+        return playerObject;
+    }
+
+    function buildPlayerHand() {
+        var playerHand = {};
         playerHand.RootNode = createElementWithClass("table", "playerHand");
         playerHand.Cards = [];
 
@@ -324,6 +333,8 @@
             playerHand.RootNode.appendChild(column);
             playerHand.Cards[index] = cardObject;
         }
+
+        return playerHand;
     }
 
     function buildCard(cardData) {
@@ -336,14 +347,18 @@
     }
 
     function buildPlayerBetting() {
-        clearChilds(bettingArea.RootNode);
+        var playerBetting = {};
+
+        playerBetting.RootNode = document.createElement("table");
+        playerBetting.BettingNode = document.createElement("tr");
+        playerBetting.RootNode.appendChild(playerBetting.BettingNode);
 
         var numberOfBets = gameState.BetFailures.length;
         for (var index = 0; index < numberOfBets; ++index) {
             var betObject = buildBetObject();
             betObject.MainLabel.textContent = index;
 
-            bettingArea.RootNode.appendChild(betObject.BetRootNode);
+            playerBetting.BettingNode.appendChild(betObject.BetRootNode);
 
             if (gameState.BetFailures[index] != 0) {
                 betObject.Button.disabled = true;
@@ -356,6 +371,8 @@
                 })(index);
             }
         }
+
+        return playerBetting;
     }
 
     function buildBetObject() {
@@ -425,7 +442,6 @@
         pendingOrders[orderID] = function (responseData) {
             if (responseData.FailureFlags == 0) {
                 localPlayerIndex = requestedIndex;
-                playerLabelText.nodeValue = "Player " + (requestedIndex + 1);
             }
         };
 
